<resources>
    <string name="app_name">Nexify</string>
    <string name="log_in_with">Log in with</string>
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>

    <!-- HomeDecor page -->
    <string name="banner_desc">Luxury bedroom banner</string>
    <string name="search">Search</string>
    <string name="home_decorations">Home Decorations</string>
    <string name="view">View</string>

    <!-- Brands -->
    <string name="havenly">Havenly</string>
    <string name="style_bohemian">Style: Bohemian</string>
    <string name="havenly_logo">Havenly logo</string>

    <string name="homez_designer">Homez Designer</string>
    <string name="style_modern">Style: Modern</string>
    <string name="homez_logo">Homez Designer logo</string>

    <string name="denotation_design">Denotation Design</string>
    <string name="style_minimalist">Style: Minimalist</string>
    <string name="denotation_logo">Denotation Design logo</string>

    <string name="vibe_space">Vibe Space</string>
    <string name="style_artsy">Style: Artsy</string>
    <string name="vibe_logo">Vibe Space logo</string>
</resources>
